fix spacing between buttons - pojdme se poznat

--- a/src/pojdme-se-poznat.css
+++ b/src/pojdme-se-poznat.css
@@ -11,7 +11,6 @@
 }
 
 .pojdme-se-poznat {
-  margin: 56px 0;
   padding: 56px 0 0;
 }
 
